# git-helper

./: .env.example  .gitignore  LICENSE  README.md  git-ai-commit.py  pyproject.toml
git_ai_commit/: cli.py  git_ai_commit.py
git_smart/: cli.py  git_smart.py  prompts.md
